Fix experience width issue on mobile devices

--- a/src/landing/sections/experiences/slider.css
+++ b/src/landing/sections/experiences/slider.css
@@ -1,7 +1,6 @@
 .embla {
-  max-width: 48rem;
+  max-width: 100%;
   margin: auto;
-  --slide-height: 19rem;
   --slide-spacing: 1rem;
   --slide-size: 100%;
 }
